SpringBootKafkaMicroService_Project/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-producer-service
spec:
  selector:
    app: order-producer-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order-consumer-service
spec:
  selector:
    app: order-consumer-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
