SpringBootKafkaMicroService_Project/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-kafka-ms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: springboot-kafka-ms.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
